fixed some styles aroudn the app like images scaling wrong on projects, and overflow breaking stuff on homepage

--- a/ui2022/src/app/pages/home-page/home-page.component.scss
+++ b/ui2022/src/app/pages/home-page/home-page.component.scss
@@ -5,6 +5,7 @@
 
 .full-height {
   height: calc(100vh - 80px);
+  overflow: hidden;
 }
 
 .switchToCol {
