--- a/ui2022/src/app/pages/project-page/components/project-description/project-description.component.scss
+++ b/ui2022/src/app/pages/project-page/components/project-description/project-description.component.scss
@@ -2,11 +2,6 @@
   padding: 0;
 }
 
-app-button {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .description {
   padding: 1rem 2rem 1rem 0;
 }
