--- a/ui2022/src/app/util/common-components/lightbox-gallery/lightbox-gallery.component.scss
+++ b/ui2022/src/app/util/common-components/lightbox-gallery/lightbox-gallery.component.scss
@@ -1,7 +1,9 @@
 #myImg {
   cursor: pointer;
-  width: 100%;
+  width: fit-content;
+  max-width: 100%;
 }
+
 
 /* The Modal (background) */
 .lightbox {
